# ftl-product-expert

./: .gitignore  README.md  pyproject.toml
ftl_product_expert/: __init__.py  cli.py  topics.py
ftl_product_expert/data/: SKILL.md
ftl_product_expert/prompts/: __init__.py  common.py  derive.py  explore.py  ingest.py  propose.py  review.py  scan.py  summary.py
ftl_product_expert/sources/: __init__.py  jira.py
