[project]
name = "ftl-product-expert"
version = "0.3.0"
description = "Build expert knowledge bases from product management data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "requests>=2.28"]

[project.optional-dependencies]
embeddings = ["fastembed>=0.7.4", "numpy"]

[project.scripts]
product-expert = "ftl_product_expert.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ftl_product_expert"]
